...
                        AssetImage('assets/icons/registration_100px.png'),
                        size: 80,
                        color: Colors.white,
                      ),
                    )),
                const Text(
                  'Register',
                  style: TextStyle(
                      color: Colors.white, fontSize: 25, fontFamily: 'UniNeue'),
                ),
                Expanded(
                  child: SingleChildScrollView(
                    child: Padding(
...
                        child: Column(
                          children: [
                            Padding(
                              padding:
                                  const EdgeInsets.only(left: 20.0, right: 40),
                              child: TextFormField(
                                key: Key('emailUser'),
                                style: const TextStyle(
                                    color: Colors.white, fontFamily: 'UniNeue'),
                                validator: (val) {},
                                controller: emailController,
                                keyboardType: TextInputType.emailAddress,
                                decoration: const InputDecoration(
...
                              ),
                            ),
                            Padding(
                              padding: const EdgeInsets.only(
                                  top: 40, left: 20.0, right: 40),
                              child: TextFormField(
                                key: Key('pwdUser'),
                                style: const TextStyle(
                                    color: Colors.white, fontFamily: 'UniNeue'),
                                validator: (val) {},
                                obscureText: obscureText,
                                keyboardType: TextInputType.text,
                                controller: pwdController,
...
                              ),
                            ),
                            Padding(
                              padding: const EdgeInsets.only(
                                  top: 40, left: 20.0, right: 40),
                              child: TextFormField(
                                key: Key('cpwdUser'),

                                style: const TextStyle(
                                    color: Colors.white,
                                    fontFamily: 'UniNeue',
                                    fontSize: 18),
                                keyboardType: TextInputType.text,
...
                                            BorderRadius.circular(30)),
                                  ),
                                  onPressed: () {
                                    _submit();
                                  },
                                  child: const Text(
                                    'Submit',
                                    style: TextStyle(
                                        color: Colors.white,
                                        fontSize: 20,
                                        fontFamily: 'UniNeue'),
                                  )),
                            ),
...

  void _submit() async {
    final String confirm_password = cpwdController.text;
    final String password = pwdController.text;
    final String email = emailController.text;
    SharedPreferences _prefs = await SharedPreferences.getInstance();
    _prefs.setString('email', email);
    _prefs.setString('password', password);
    _prefs.setString('cPassword', confirm_password);
    Navigator.of(context).pushNamed('/login');
  }
}

