...
                        child: Column(
                          children: [
                            Padding(
                              padding:
                                  const EdgeInsets.only(left: 20.0, right: 40),
                              child: TextFormField(
                                key: Key('emailVaccount'),
                                style: const TextStyle(
                                    color: Colors.white, fontFamily: 'UniNeue'),
                                validator: (val) {
                                  return null;
                                },
                                controller: emailController,
...
                                  onPressed: () {
                                    _forgot_password();
                                    Navigator.of(context)
                                        .pushNamed('/forgot-password/confirm');
                                  },
                                  child: const Text(
                                    'Search',
                                    style: TextStyle(
                                        color: Colors.white,
                                        fontSize: 20,
                                        fontFamily: 'UniNeue'),
                                  )),
                            ),
...
